@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4ParticleChange.icc,v 1.5 1999-12-15 14:53:55 gunter Exp $
+// $Id: G4ParticleChange.icc,v 1.6 2000-01-18 02:54:12 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -190,7 +190,7 @@ inline
 inline 
   void G4ParticleChange::SetWeightChange(G4double w)
 {
-  if(fUseEB) theWeightChange = w;
+  theWeightChange = w;
 }
 
 inline  
