@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4VParticleChange.icc,v 1.3 1999-12-15 14:53:55 gunter Exp $
+// $Id: G4VParticleChange.icc,v 1.4 2000-01-18 02:54:12 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //----------------------------------------------------------------
@@ -203,8 +203,8 @@ inline void G4VParticleChange::InitializeSecondaries(const G4Track&)
 
 inline void G4VParticleChange::AddSecondary(G4Track *aTrack)
 {
-  // pass the weight of parent track if this particle change use no EB
-  aTrack->SetWeight(theParentWeight);
+  // pass the weight of parent track if the weight is larger than parent weight
+  if (aTrack->GetWeight()>theParentWeight) aTrack->SetWeight(theParentWeight);
   
   // add a secondary after size check
   if (theSizeOftheListOfSecondaries > theNumberOfSecondaries) {
