@@ -1,4 +1,4 @@
-$Id: History,v 1.13 1999-11-07 16:31:24 kurasige Exp $
+$Id: History,v 1.14 2000-01-18 02:54:07 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Jan 18, 2000 H.Kurashige (track-V01-00-00)
+-  Fixed bugs in treatment of secondary track weight 
+
 Nov 7, 1999 H.Kurashige (track-V00-01-01)
 -  Added comments for "Software Reference Manual" 
 
